--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.6.0+9
+  location: ^4.3.0
   path: ^1.8.0
   path_provider: ^2.0.4
   provider: ^6.0.0
