--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+    #Using google_maps_flutter and location requires Android and IOs build file configuration
+  google_maps_flutter: ^2.0.9
   image_picker: ^0.6.0+9
   location: ^4.3.0
   path: ^1.8.0
